сверстал что то

--- a/index.html
+++ b/index.html
@@ -4,34 +4,231 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/modern-normalize.css">
     <link rel="stylesheet" href="./css/style.css" />
     <title>BOBO</title>
   </head>
-  <body">
+  <body>
     <header>
+      <div class="container header-container">
       <nav class="nav">
-        <div >
-          <a href="" class="nav-logo">BOBO</a>
+        <a class="logo" href="">BOBO</a>
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a class="nav-link" href="">SHOP</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">LOOKBOOK</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">FEATURES</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">PAGES</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">BLOG</a>
+          </li>
+        </ul>
+      </nav>
+      </div>
+      <!-- <ul class="header-icons">
+        <li>
+          <svg>
+            <use></use>
+          </svg>
+        </li>
+        <li>
+          <svg>
+            <use></use>
+          </svg>
+        </li>
+        <li>
+          <svg>
+            <use></use>
+          </svg>
+        </li>
+      </ul> -->
+    </header>
+    <main>
+      <section class="hero-section">
+        <div class="container container-hero">
+        <p class="titel-text">NEW TREND</p>
+        <h1 class="hero-titel">oversize</h1>
+        <p class="titel-text">An exclusive selection of this season's trends.</p>
+        <button class="btn-hero" type="button">discover</button>
+        <button class="btn-hero" type="button">shop now</button>
         </div>
-        <div >
-          <ul class="nav-list">
-            <li><a href="" class="link">Женское</a></li>
-            <li><a href="" class="link">Мужское</a></li>
-            <li><a href="" class="link">SALE</a></li>
-            <li><a href="" class="link">О нас</a></li>
-            <li><a href="" class="link">Контакты</a></li>
-            <li><a href="" class="link">Сотрудничевство</a></li>
+      </section>
+      <section class="section">
+        <div class="container ">
+          <h2 class="titel-visually-hidden">new colections</h2>
+          <ul class="colections-list">
+            <li class="colections-item">
+              <img src="./images/jpg/men1.jpg" alt="" width="">
+            </li>
+            <li class="colections-item">
+              <img src="./images/jpg/women1.jpg" alt="" width="">
+            </li>
+            <li class="colections-item">
+              <img src="./images/jpg/men4.jpg" alt="" width="">
+            </li>
+            <li class="colections-item">
+              <img src="./images/jpg/women4.jpg" alt="" width="">
+            </li>
           </ul>
         </div>
-        <div>
-            <ul class="nav-buttons">
-                <li><button class="button-search">Search</button></li>
-                <li><button class="button-log-in">Log-in</button></li>    
-            </ul>
-            <a class="trash" href="">trash</a>
+      </section>
+      <section class="section">
+        <div class="container women-container">
+          <h2 class="titel">fomen's fashion</h2>
+          <p class="pretitel-text">Shop our new arrivals from established brands</p>
+          <ul class="women-list">
+            <li class="women-item">
+              <img src="/images/jpg/women4.jpg" alt="">
+                <h3 class="titel-name">name</h3>
+                <p>prise</p>
+            </li>
+            <li class="women-item">
+              <img src="/images/jpg/women3.jpg" alt="">
+                <h3 class="titel-name">name</h3>
+                <p>prise</p>
+            </li>
+            <li class="women-item">
+              <img src="/images/jpg/women2.jpg" alt="">
+                <h3 class="titel-name">name</h3>
+                <p>prise</p>
+            </li>
+            <li class="women-item">
+              <img src="/images/jpg/women1.jpg" alt="">
+                <h3 class="titel-name">name</h3>
+                <p>prise</p>
+            </li>
+          </ul>
         </div>
-      </nav>
-    </header>
+      </section>
+      <section class="section">
+        <div class="container men-container">
+          <h2 class="titel">men's fashion</h2>
+          <p class="pretitel-text">Shop our new arrivals from established brands</p>
+          <ul class="mens-list">
+            <li class="mens-item">
+              <img src="./images/jpg/men4.jpg" alt="">
+              <h3 class="titel-name">name</h3>
+              <p>prise</p>
+            </li>
+            <li class="mens-item">
+              <img src="./images/jpg/men3.jpg" alt="">
+              <h3 class="titel-name">name</h3>
+              <p>prise</p>
+            </li>
+            <li class="mens-item">
+              <img src="./images/jpg/men2.jpg" alt="">
+              <h3 class="titel-name">name</h3>
+              <p>prise</p>
+            </li>
+            <li class="mens-item">
+              <img src="./images/jpg/men1.jpg" alt="">
+              <h3 class="titel-name">name</h3>
+              <p>prise</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section">
+        <div class="container container-style">
+          <h2 class="titel">bobo styles</h2>
+          <p class="pretitel-text">Choose Your Style</p>
+          <ul>
+            <li>
+              <img src="" alt="">
+            </li>
+            <li>
+              <img src="" alt="">
+            </li>
+            <li>
+              <img src="" alt="">
+            </li>
+          </ul>
+          </div>
+        </div>
+      </section>
+      <section>
+        <h2>new arivels</h2>
+        <button type="button">view all</button>
+        <img src="" alt="">
+      </section>
+    </main>
+    <footer>
+      <h2>BOBO</h2>
+      <div>
+        <p>We earned a reputation of being good at what we do.
+        Let us take your online shop to new dimension in
+        success!</p>
+      </div>
+      <address>
+        <ul>
+          <li>
+            <a>Kyiv,Ukraine</a>
+          </li>
+          <li>
+            bobo@gmail.com
+          </li>
+          <li>
+            +380938877752
+          </li>
+        </ul>
+      </address>
+      <div>
+        <ul>
+          <h3>SHOP</h3>
+          <li>
+            <a class="" href=""></a>
+          </li>
+          <li>
+            <a class="" href=""></a>
+          </li>
+          <li>
+            <a class="" href=""></a>
+          </li>
+          <li>
+            <a class="" href=""></a>
+          </li>
+        </ul>
+        <ul>
+          <h3>HELP</h3>
+          <li>
+            <a class="" href=""></a>
+          </li>
+          <li>
+            <a class="" href=""></a>
+          </li>
+          <li>
+            <a class="" href=""></a>
+          </li>
+          <li>
+            <a class="" href=""></a>
+          </li>
+        </ul>
+        <ul>
+          <h3>ABOUT</h3>
+          <li>
+            <a class="" href=""></a>
+          </li>
+          <li>
+            <a class="" href=""></a>
+          </li>
+          <li>
+            <a class="" href=""></a>
+          </li>
+          <li>
+            <a class="" href=""></a>
+          </li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
